--- a/css/style.css
+++ b/css/style.css
@@ -24,19 +24,31 @@ body {
   background-repeat: repeat;
 }
 
-.visually-hidden {
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
   position: absolute;
+
   width: 1px;
   height: 1px;
   margin: -1px;
   border: 0;
   padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
 
 a {
   text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 .page-title {
@@ -49,6 +61,10 @@ a {
 }
 
 .button {
+  display: inline-block;
+  margin-right: 16px;
+  padding: 10px 30px;
+
   font: inherit;
 
   text-align: center;
@@ -66,6 +82,13 @@ a {
   background-color: #663d15;
 }
 
+.button.disabled,
+.button:disabled {
+  cursor: default;
+  opacity: 0.5;
+  background-color: #000000;
+}
+
 .main-navigation {
   display: flex;
   flex-direction: column;
@@ -78,11 +101,17 @@ a {
 
 .site-navigation,
 .user-navigation {
+  margin: 0;
+  padding: 0;
+
   list-style: none;
 }
 
 .site-navigation a,
 .user-navigation a {
+  display: block;
+  padding: 25px 20px 27px 20px;
+
   color: #ffffff;
 }
 
@@ -91,6 +120,55 @@ a {
 .user-navigation a:hover,
 .user-navigation a:focus {
   background-color: #242424;
+}
+
+.site-navigation-active {
+  position: relative;
+}
+
+.site-navigation-active a:not([href]) {
+  background-color: #000000;
+}
+
+.site-navigation-active::after {
+  content: "";
+
+  position: absolute;
+  right: 20px;
+  bottom: 0;
+  left: 20px;
+
+  height: 5px;
+
+  background-color: #ffffff;
+}
+
+.user-navigation .login-link {
+  position: relative;
+  padding-left: 50px;
+}
+
+.login-link::before {
+  content: "";
+
+  position: absolute;
+  top: 27px;
+  left: 20px;
+
+  width: 16px;
+  height: 18px;
+
+  background-image: url("../img/login.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+
+  opacity: 0.3;
+}
+
+.login-link:hover::before,
+.login-link:hover::before,
+.login-link:hover::before {
+  opacity: 1;
 }
 
 .features {
@@ -113,8 +191,33 @@ a {
 }
 
 .feature-item h3 {
+  position: relative;
+
+  margin: 0;
+  margin-bottom: 60px;
+
   font-size: 30px;
   line-height: 42px;
+}
+
+.feature-item h3::after {
+  content: "";
+
+  position: absolute;
+  bottom: -30px;
+  left: 50%;
+  margin-left: -10px;
+
+  width: 20px;
+  height: 20px;
+
+  background-color: #ffffff;
+
+  transform: rotate(45deg);
+}
+
+.feature-item p {
+  margin: 0 24px;
 }
 
 .index-columns {
@@ -126,22 +229,38 @@ a {
   color: #000000;
 
   background-color: #f8f5f2;
-  background-image: url("../img/white-texture.jpg");
-  background-position: 0 0;
-  background-repeat: repeat;
+  background-image: url("../img/decor-shadow.png"),
+    url("../img/white-texture.jpg");
+  background-position: center, 0 0;
+  background-repeat: no-repeat, repeat;
 }
 
 .index-columns h2 {
+  margin: 0;
+  margin-bottom: 25px;
+
   font-size: 30px;
   line-height: 42px;
 }
 
+.news {
+  width: 380px;
+}
+
 .news-list {
+  margin: 0;
+  margin-bottom: 25px;
+  padding: 0;
+
   list-style: none;
 }
 
-.news {
-  width: 380px;
+.news-item {
+  margin-bottom: 25px;
+}
+
+.news-item p {
+  margin: 0;
 }
 
 .news-item time {
@@ -152,20 +271,86 @@ a {
   width: 300px;
 }
 
+.gallery-container {
+  position: relative;
+
+  height: 260px;
+}
+
 .gallery-content {
+  height: 164px;
+  margin: 0;
+
   background-color: #cccccc;
   border: 7px solid #ffffff;
+}
+
+.gallery-content img {
+  width: 286px;
+  height: 164px;
+}
+
+.gallery-button {
+  box-sizing: border-box;
+  position: absolute;
+  bottom: 0;
+
+  width: 140px;
+  margin: 0;
+}
+
+.gallery-button-back {
+  left: 0;
+}
+
+.gallery-button-next {
+  right: 0;
 }
 
 .contacts {
   width: 380px;
 }
 
+.contacts p {
+  margin: 0;
+  margin-bottom: 25px;
+}
+
 .appointment {
   width: 300px;
 }
 
+.appointment-info {
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+.appointment-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.appointment-item {
+  width: 140px;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.appointment-item label {
+  display: block;
+  margin-bottom: 9px;
+  margin-left: 15px;
+}
+
 .appointment-item input {
+  box-sizing: border-box;
+  width: 140px;
+  padding-top: 8px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 7px;
+
   font: inherit;
 
   background-color: transparent;
@@ -174,6 +359,154 @@ a {
 
 .appointment-item input:focus {
   border-color: #663d15;
+}
+
+.appointment .button {
+  display: block;
+  width: 100%;
+  margin-top: 10px;
+  margin-right: 0;
+}
+
+.inner-content {
+  margin-bottom: 75px;
+}
+
+.inner-content h2 {
+  margin-top: 60px;
+  margin-bottom: 30px;
+
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.inner-content h3 {
+  margin-top: 60px;
+  margin-bottom: 30px;
+
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.inner-content h2 + h3 {
+  margin-top: 30px;
+}
+
+.inner-content p {
+  margin: 14px 0;
+}
+
+.inner-content table {
+  border-collapse: collapse;
+}
+
+.inner-content td {
+  padding: 10px 15px;
+
+  border: 2px solid #000000;
+}
+
+.inner-content .big-heading {
+  display: flex;
+  align-items: center;
+
+  margin-top: 55px;
+  margin-bottom: 65px;
+
+  font-size: 48px;
+  line-height: 48px;
+  text-align: center;
+}
+
+.big-heading::before,
+.big-heading::after {
+  content: "";
+
+  flex-grow: 1;
+  flex-shrink: 0;
+
+  width: 50px;
+  height: 2px;
+
+  background-color: #000000;
+}
+
+.big-heading::before {
+  margin-right: 25px;
+}
+
+.big-heading::after {
+  margin-left: 25px;
+}
+
+.custom-list-1 {
+  margin: 14px 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.custom-list-1 li {
+  position: relative;
+  
+  margin-bottom: 15px;
+  padding-left: 20px;
+}
+
+.custom-list-1 li::before {
+  content: "";
+
+  position: absolute;
+  top: 8px;
+  left: 0;
+
+  width: 8px;
+  height: 8px;
+
+  background-color: #000000;
+  transform: rotate(45deg);
+}
+
+.custom-table-1 {
+  width: 100%;
+}
+
+.custom-table-1 td {
+  width: 50%;
+}
+
+.custom-table-1 td:last-child {
+  text-align: center;
+}
+
+.inner-columns {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  
+  margin: 60px 0;
+}
+
+.inner-column-left,
+.inner-column-right {
+  width: 460px;
+}
+
+.inner-column-left *:first-child,
+.inner-column-right *:first-child {
+  margin-top: 0;
+}
+
+.inner-column-left *:last-child,
+.inner-column-right *:last-child {
+  margin-bottom: 0;
+}
+
+.inner-columns > h3:first-child {
+  width: 460px;
+  margin-top: 0;
+  margin-right: 460px;
+  margin-right: calc(100% - 460px);
 }
 
 .main-footer {
@@ -215,19 +548,58 @@ a {
 }
 
 .footer-social ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 141px;
+  margin: 0 auto;
+  padding: 0;
+
   list-style: none;
 }
 
+.footer-social b {
+  display: block;
+  margin-bottom: 15px;
+}
+
 .social-button {
-  color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 43px;
+  height: 43px;
+
+  background-color: #000000;
+}
+
+.social-button:hover,
+.social-button:focus {
+  background-color: #ffffff;
+}
+
+.social-button:hover path,
+.social-button:focus path {
+  fill: #000000;
 }
 
 .footer-copyright {
-  width: 150px;
+  width: 140px;
   margin: 0;
   margin-left: auto;
 
   text-align: center;
+}
+
+.footer-copyright .button {
+  display: block;
+  margin-right: 0;
+  padding: 10px 25px;
+}
+
+.footer-copyright b {
+  display: block;
+  margin-bottom: 15px;
 }
 
 .footer-copyright .button:hover,
@@ -238,24 +610,92 @@ a {
 }
 
 .modal {
+  position: fixed;
+
   color: #000000;
 
   background-color: #f8f3f0;
   background-image: url("../img/white-texture.jpg");
   background-position: 0 0;
   background-repeat: repeat;
+  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
 }
 
-.modal h2 {
+.modal-login {
+  top: 120px;
+  left: 50%;
+
+  display: none;
+
+  width: 300px;
+  margin-left: -230px;
+  padding: 50px 80px;
+}
+
+.modal-close {
+  position: absolute;
+  top: 0;
+  right: -34px;
+
+  width: 22px;
+  height: 22px;
+
+  background-color: transparent;
+  border: 0;
+
+  cursor: pointer;
+}
+
+.modal-close::before,
+.modal-close::after {
+  content: "";
+
+  position: absolute;
+  top: 10px;
+  left: 2px;
+
+  width: 19px;
+  height: 3px;
+
+  background-color: #d0d0d0;
+}
+
+.modal-close::before {
+  transform: rotate(45deg);
+}
+
+.modal-close::after {
+  transform: rotate(-45deg);
+}
+
+.login-form p {
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.modal-login h2 {
+  margin: 0;
+  margin-bottom: 20px;
+
   font-size: 30px;
   line-height: 42px;
 }
 
+.modal-description {
+  margin: 0;
+  margin-bottom: 10px;
+}
+
 .login-form input[type="text"],
 .login-form input[type="password"] {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 10px 15px;
+  padding-right: 40px;
+
   font: inherit;
   color: #000000;
-  text-transform: uppercase;
+  text-transform: inherit;
 
   background-color: #f9f6f3;
   border: 2px solid #000000;
@@ -265,9 +705,75 @@ a {
   border-color: #663d15;
 }
 
+p.login-help {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 15px 0;
+}
+
+.login-icon-user {
+  background-image: url("../img/user.svg");
+  background-position: 270px center;
+  background-repeat: no-repeat;
+}
+
+.login-icon-password {
+  background-image: url("../img/lock.svg");
+  background-position: 270px center;
+  background-repeat: no-repeat;
+}
+
+.login-checkbox {
+  position: relative;
+
+  padding-left: 30px;
+
+  cursor: pointer;
+}
+
 .login-checkbox:hover,
 .login-checkbox:focus {
   color: #663d15;
+}
+
+.login-checkbox input[type="checkbox"] + .checkbox-indicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 17px;
+  height: 17px;
+
+  border: 2px solid #000000;
+}
+
+.login-checkbox input[type="checkbox"]:focus + .checkbox-indicator {
+  border-color: #663d15;
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+}
+
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::before,
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::after {
+  content: "";
+
+  position: absolute;
+  top: 8px;
+  left: 1px;
+
+  width: 15px;
+  height: 2px;
+
+  background-color: #000000;
+}
+
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::before {
+  transform: rotate(45deg);
+}
+
+.login-checkbox input[type="checkbox"]:checked + .checkbox-indicator::after {
+  transform: rotate(-45deg);
 }
 
 .restore {
@@ -280,7 +786,31 @@ a {
   text-decoration: none;
 }
 
+.login-form .button {
+  width: 100%;
+  margin-right: 0;
+}
+
+.modal-map {
+  top: 50%;
+  left: 50%;
+
+  display: none;
+  width: 766;
+  height: 560px;
+  margin-top: -280px;
+  margin-left: -383px;
+
+  border: 7px solid white;
+}
+
+.modal-map p {
+  margin: 0;
+}
+
 .breadcrumbs {
+  display: flex;
+  flex-wrap: wrap;
   padding: 0;
   margin: 0;
   margin-bottom: 50px;
@@ -291,7 +821,27 @@ a {
 }
 
 .breadcrumbs a {
+  position: relative;
+  margin-right: 15px;
+
   color: #000000;
+}
+
+.breadcrumbs li:not(:last-child) {
+  margin-right: 15px;
+}
+
+.breadcrumbs li:not(.breadcrumbs-current)::after {
+  content: "";
+
+  display: inline-block;
+  width: 7px;
+  height: 7px;
+  margin-left: -1px;
+
+  background-color: #000000;
+
+  transform: rotate(45deg);
 }
 
 .breadcrumbs a:hover,
@@ -308,17 +858,85 @@ a {
 }
 
 .filter fieldset {
+  margin: 0;
+  margin-bottom: 32px;
+  padding: 0;
   border: none;
 }
 
 .filters legend {
+  margin-bottom: 28px;
+
   font-size: 24px;
   line-height: 30px;
 }
 
 .filters ul {
+  margin: 0;
+  padding: 0;
+
   list-style: none;
+
   line-height: 18px;
+}
+
+.filter-option {
+  margin-bottom: 19px;
+  padding-left: 43px;
+}
+
+.filter-option label {
+  position: relative;
+
+  display: block;
+
+  cursor: pointer;
+  user-select: none;
+}
+
+.filter-input-checkbox + label::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -43px;
+
+  width: 16px;
+  height: 16px;
+
+  border: solid 2px #000000;
+}
+
+.filter-input-checkbox:checked + label::before {
+  background-image: url("../img/cross.svg");
+  background-repeat: no-repeat;
+  background-position: 2px 2px;
+}
+
+.filter-input-radio + label::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -43px;
+
+  width: 16px;
+  height: 16px;
+
+  border: solid 2px #000000;
+  border-radius: 50%;
+}
+
+.filter-input-radio:checked + label::after {
+  content: "";
+  position: absolute;
+  top: 6px;
+  left: -37px;
+
+  width: 8px;
+  height: 8px;
+
+  background-color: #000000;
+  background-repeat: no-repeat;
+  border-radius: 50%;
 }
 
 .filter-input:hover + label,
@@ -341,6 +959,7 @@ a {
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
+  margin-top: 6px;
   margin-bottom: 25px;
 
   list-style: none;
@@ -367,36 +986,90 @@ a {
   color: #000000;
 }
 
+.catalog-item > a {
+  display: flex;
+  flex-direction: column;
+}
+
 .catalog-item h3 {
+  order: 1;
+  margin: 0;
+  margin-top: 13px;
+  margin-bottom: 13px;
+  margin-left: 16px;
+  margin-right: 16px;
+
   font-size: 14px;
   line-height: 18px;
 }
 
+.catalog-item-image {
+  width: 220px;
+  height: 165px;
+  margin: 0;
+}
+
 .catalog-category {
+  display: block;
+
   text-transform: none;
 }
 
+.catalog-item-price {
+  display: flex;
+  margin-top: 0;
+  margin-left: 16px;
+  margin-right: 16px;
+  margin-bottom: 16px;
+}
+
 .catalog-item-price b {
+  width: 109px;
+  padding: 11px 26px 12px;
+
   font-size: 14px;
   line-height: 20px;
   text-align: center;
 
   background-color: #e5e5e5;
+
+  box-sizing: border-box;
 }
 
 .catalog-item-price .button {
+  width: 44px;
+  padding: 12px 17px 11px;
+  margin-right: 0;
+
   line-height: 20px;
   color: #ffffff;
 }
 
 .pagination-list {
+  display: flex;
+  flex-wrap: wrap;
+
   padding: 0;
   margin: 0;
 
   list-style: none;
 }
 
+.pagination-item {
+  margin-right: 7px;
+}
+
+.pagination-item:last-child {
+  margin-right: 0;
+}
+
 .pagination-item a {
+  display: block;
+  padding-top: 10px;
+  padding-right: 18px;
+  padding-bottom: 9px;
+  padding-left: 18px;
+
   color: #ffffff;
 
   background-color: #000000;
@@ -424,22 +1097,56 @@ a {
 
 .product-photos {
   width: 460px;
+  padding-top: 7px;
+}
+
+.product-photo-full {
+  width: 460px;
+  height: 498px;
+  margin: 0;
+  margin-bottom: 21px;
+
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
 }
 
 .product-photo-preview {
+  display: flex;
+  margin: 0;
+  padding: 0;
+
   list-style: none;
 }
 
 .product-photo-preview li {
+  width: 140px;
+  height: 149px;
+  margin-right: 20px;
+
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
 }
 
-.product-photo-full {
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+.product-photo-preview li:nth-child(3n) {
+  margin-right: 0;
 }
 
 .product-info {
   width: 390px;
+}
+
+.product-info p {
+  margin: 0;
+}
+
+.product-description {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 25px;
+  margin-bottom: 30px;
+  padding-right: 10px;
+}
+
+.product-description p {
+  width: 200px;
 }
 
 .product-article {
@@ -447,20 +1154,69 @@ a {
   color: #aeaeae;
 }
 
-.produc-price b {
+p.product-text {
+  margin-bottom: 36px;
+}
+
+p.product-price {
+  display: flex;
+  margin-bottom: 62px;
+}
+
+.product-price .button {
+  width: 44px;
+  padding: 12px 17px 11px;
+  margin-right: 0;
+
+  line-height: 20px;
+  color: #ffffff;
+}
+
+.product-price b {
+  width: 109px;
+  padding: 11px 26px 12px;
+
+  font-size: 14px;
   line-height: 20px;
   text-align: center;
 
   background-color: #e5e5e5;
+
+  box-sizing: border-box;
 }
 
 .product-info h3 {
+  margin: 0;
+  margin-bottom: 27px;
+
   font-size: 24px;
   line-height: 30px;
 }
 
 .product-info ul {
+  margin: 0;
+  padding: 0;
+  padding-left: 21px;
+
   list-style: none;
+}
+
+.product-info li {
+  position: relative;
+}
+
+.product-info li::before {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: -19px;
+
+  width: 8px;
+  height: 8px;
+
+  background-color: #000000;
+
+  transform: rotate(45deg);
 }
 
 /* Сеточные стили*/
@@ -483,6 +1239,7 @@ a {
 
 .main-navigation-wrapper {
   width: 100%;
+  min-height: 70px;
   margin-bottom: 60px;
 
   background-color: #000000;
@@ -494,15 +1251,15 @@ a {
 }
 
 .site-navigation {
+  display: flex;
+  flex: wrap;
+
   width: 620px;
-  margin: 0;
-  padding: 0;
 }
 
 .user-navigation {
-  width: 140px;
-  margin: 0;
-  padding: 0;
+  display: flex;
+  max-width: 140px;
 }
 
 .inner-page .main-header {
@@ -534,5 +1291,13 @@ a {
 }
 
 .inner-page .main-footer {
-  margin-top: 45px;
+  margin-top: 49px;
+  padding-top: 56px;
+  padding-bottom: 37px;
+
+  background-color: #212121;
+  background-image: url("../img/footer-shadow.png"),
+    url("../img/dark-texture.jpg");
+  background-position: 0 0, 0 0;
+  background-repeat: repeat-x, repeat;
 }
