Добавил интерактивность для формы и карты.

--- a/css/style.css
+++ b/css/style.css
@@ -448,7 +448,7 @@ img {
 
 .custom-list-1 li {
   position: relative;
-  
+
   margin-bottom: 15px;
   padding-left: 20px;
 }
@@ -483,7 +483,7 @@ img {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  
+
   margin: 60px 0;
 }
 
@@ -805,7 +805,71 @@ p.login-help {
 }
 
 .modal-map p {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
   margin: 0;
+}
+
+.modal-map iframe {
+  position: relative;
+  z-index: 2;
+
+  border: none;
+
+  background-color: #ffffff;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
+
+.modal-show {
+  display: block;
+
+  animation: bounce 0.6s;
+}
+
+.modal-error {
+  animation: shake 0.6s;
 }
 
 .breadcrumbs {
